2007-04-10 19:19 -0700  Brendan Cully  <brendan@kublai.com>  (ddd38b4cf15c)

	* hcache.c: Refactor mutt_hcache_open to share more code

	* hcache.c: Save some stats when header cache already exists

	* hcache.c, imap/imap.c, imap/imap_private.h, imap/message.c,
	imap/util.c: Make IMAP header cache layout match body cache. You can
	now make them point to the same directory. Each folder will have a
	folder.hcache file for the header cache.

	* hcache.c, hcache.h, imap/imap.c, imap/util.c, mh.c, pop.c: Add
	hcache path name hook

	* bcache.c, url.c, url.h: Simplify body cache path creation

	* imap/imap.c, imap/imap_private.h, imap/message.c, imap/util.c:
	Do not hold hcache open while mailbox is open - it can lead to
	lockups

	* imap/command.c, imap/imap.c, imap/imap_private.h, imap/util.c: Add
	imap_hcache_del; minor cleanups

	* main.c: Fix a compiler warning

	* rfc3676.c: Don't use $indent_string to quote replies to flowed
	messages (closes #2874).

2007-04-10 10:16 -0700  Petr Písař  <petr.pisar@atlas.cz>  (af01580c9a08)

	* po/cs.po: Updated Czech translation

2007-04-10 10:13 -0700  Brendan Cully  <brendan@kublai.com>  (9bbf304e09bc)

	* rfc3676.c: Wrap flowed lines at no more than FLOWED_MAX in
	replies

2007-04-09 20:36 -0700  Michael Elkins  <me@mutt.org>  (fbe67329e688)

	* main.c: Exit with a nonzero value if sending a message in batch mode
	fails (bug #2709).

	* browser.c: Use mutt_pretty_size() to format '%s' in $folder_format
	so it is similar to '%c' in $hdr_format

2007-04-09 11:32 -0700  Brendan Cully  <brendan@kublai.com>  (df7a0ee95618)

	* imap/TODO: Kill off some IMAP TODO items

	* imap/imap.c: Null out idata->hcache when closing, and remove close
	from open failure (mx_close will handle it).

2007-04-09 08:56 -0700  Vsevolod Volkov  <vvv@mutt.org.ua>  (605c6d60217d)

	* po/ru.po: Updated Russian translation.

2007-04-07 16:22 -0700  Michael Elkins  <me@mutt.org>  (c310dd3d6d73)
